--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,6 +6,7 @@ import Home from '../components/home/Home.astro'
 import Acerca from '../components/acerca/Acerca.astro'
 import Servicios from '../components/servicios/Servicios.astro'
 import Proyects from '../components/proyects/Proyects.astro'
+import Footer from '../components/footer/Footer.astro';
 ---
 
 <Layout title="Welcome to Astro.">
@@ -17,6 +18,7 @@ import Proyects from '../components/proyects/Proyects.astro'
 			<Servicios />
 			<Proyects />
 			<FormEmail />
+			<Footer />
 		</div>
 	</main>
 </Layout>
