--- a/src/components/contact/Form.astro
+++ b/src/components/contact/Form.astro
@@ -4,7 +4,7 @@ import '../../styles/contact/formEmail.css';
 import TitleSections from '../helpers/TitleSections.astro';
 ---
 
-<section id="contacto" class="mx-auto max-w-[1200px] px-4 flex justify-center flex-col items-center">
+<section id="contacto" class="mx-auto max-w-[1200px] px-4 lg:px-[60px] pt-[30px] lg:pb-[100px] pb-10 flex justify-center flex-col items-center">
   <TitleSections
     title='Contacto'
     text='Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur quisquam voluptates officia aliquid, sapiente, ipsam natus quasi.'
