[jonathan: add pdf CV]

--- a/src/components/contact/Form.astro
+++ b/src/components/contact/Form.astro
@@ -11,14 +11,14 @@ import TitleSections from '../helpers/TitleSections.astro';
     bgColor='bg-blueviolet'
   />
   <div class="form-container">
-    <form class="form">
+    <form class="form" netlify>
       <div class="form-group">
-        <label for="email">Company Email</label>
-        <input required="" name="email" id="email" type="text">
+        <label for="email">Tú Email</label>
+        <input name="email" id="email" type="text">
       </div>
       <div class="form-group">
-        <label for="textarea">How Can We Help You?</label>
-        <textarea required="" cols="50" rows="10" id="textarea" name="textarea"></textarea>
+        <label for="textarea">¿Cómo puedo ayudarte?</label>
+        <textarea required="" cols="50" rows="10" id="textarea" name="menssaje"></textarea>
       </div>
       <button type="submit" class="form-submit-btn">Submit</button>
     </form>
