--- a/src/components/home/Home.astro
+++ b/src/components/home/Home.astro
@@ -22,7 +22,7 @@ import '../../styles/home/home.css';
     </p>
     <div class="mt-12">
       <a
-        href="/"
+        href="/pdf/hoja-de-vida-jg.pdf"
         class="py-3 px-5 mt-5 rounded-lg border-blueviolet border-[2px] hover:bg-blueviolet transition-colors ease-linear duration-300"
         target="_blank">
         Descargar CV
