--- a/src/styles/servicios/servicios.css
+++ b/src/styles/servicios/servicios.css
@@ -42,7 +42,7 @@
 	color: hsl(0 0% 100%);
 	border-color: hsl(0 0% 25%);
 	box-shadow: 0 10px 20px -5px hsl(0 0% 0% / 0.5);
-	resize: horizontal;
+	/* resize: horizontal; */
 	overflow: hidden;
 	max-width: min(calc(600px + 8rem), calc(100vw - 2rem));
 	min-width: 280px;
